--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^19.1.1",
     "react-i18next": "^16.5.0",
     "react-icons": "^5.5.0",
+    "react-scroll": "^1.9.3",
     "tailwindcss": "^4.1.15"
   },
   "devDependencies": {
